fix tooltip z-index

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,7 +1,7 @@
 body {
   position: relative;
   min-height: 100vh;
-  padding-bottom: 110px;
+  padding-bottom: 100px;
 }
 
 .hidden {
@@ -251,6 +251,7 @@ main section {
   font-size: 1em;
   border-radius: 4px;
   display: none;
+  z-index: 1;
 }
 
 #tooltip[data-show] {
